--- a/notes/meeting 2021-03-17.md
+++ b/notes/meeting 2021-03-17.md
@@ -26,7 +26,7 @@ ep_t4_t5 =
     ? apply (\j -> write ary i x >> (writeList ary (S i) xs >> writeList ary j ys)) (S (i `add` length xs))
 ```
 
-- [ ] look into how LEAN handles prop equality
-- [ ] test if `eqprop` = `=` introduces unsoundness
-- [ ] see if i can do the automatic expansion of infixed transutils
-- [ ] issue: allow declaring local refinement liftings
+- look into how LEAN handles prop equality
+- test if `eqprop` = `=` introduces unsoundness
+- see if i can do the automatic expansion of infixed transutils
+- issue: allow declaring local refinement liftings
